...
                value: formatMarketCap(company.marketCap),
              ),
            ],
          ),
          const SizedBox(height: 24),
          const Text(
            'About Company',
            style: TextStyle(fontSize: 16, fontWeight: FontWeight.w700),
          ),
          const SizedBox(height: 8),
          const Text(
            CompanyDetailsScreen._aboutCompanyText,
            style: TextStyle(
...
              height: 1.5,
              color: Color(0xFF6B7280),
            ),
          ),
          const SizedBox(height: 24),
          const Text(
            'Company Information',
            style: TextStyle(fontSize: 16, fontWeight: FontWeight.w700),
          ),
          const SizedBox(height: 12),
          Container(
            decoration: BoxDecoration(
              color: Colors.white,
...
